--- a/productSurvey/product_survey.html
+++ b/productSurvey/product_survey.html
@@ -16,6 +16,8 @@
   <input type="text" id="job" placeholder="Your Job" required><br>
   <label for="designation">Designation:</label><br>
   <input type="text" id="designation" placeholder="Your Designation" required><br>
+  <label for="Experince">Experince</label><br>
+  <input type="text" id="Experince" placeholder="Experince" required><br>
   <label for="productType">Product Type:</label><br>
   <select id="productType" required>
     <option value="perfume">Perfume</option>
@@ -33,6 +35,7 @@
   <p>Email: <span id="userEmail"></span></p>
   <p>Job: <span id="userJob"></span></p>
   <p>Designation: <span id="userDesignation"></span></p>
+  <p>Experince: <span id="userExperince"></span></p>
   <p>Feedback for  <span id="userProductChoice"></span>: <span id="userFeedback"></span></p>
 </div>
 <script src="./product_survey.js"></script>
